--- a/digital-logic-design/intro.qmd
+++ b/digital-logic-design/intro.qmd
@@ -2,27 +2,16 @@
 
 ## Perspective
 
-<img src="images/intro/computing-stack.png" alt="Digital Logic Design in the Computing Stack" title="Digital Logic Design in the Computing Stack" style="width:25%; height:auto; display: block; margin: 20px auto;">
-*Figure 1: Digital Logic Design in the Computing Stack*
+![Digital Logic Design in the Computing Stack (figure from EECS270-W24)](images/intro/computing-stack.png){#fig-label fig-align="center" width="30%"}
 
 
 ::: {#nte-binary-def .callout-note}
 ## Definition - Digital
-**Digital** signals can only take on discrete binary values in one of two states: 0 (low, false) or 1 (high, true).
+**Digital** signals represent information as *discrete* values, typically binary values where two valid states exist: 0 (low, false) or 1 (high, true).
 :::
 
 This notebook focuses on the design of **digital circuits**. We study both the logic/math used to build digital systems (Boolean algebra), as well as the circuit design implications (transistors, timing, etc). 
 
-
-
-## Analog vs Digital
-
-In contrast to the discrete **digital** signals, **analog** signals are *continuous*. Signals from the physical world are inherently analog (e.g. sound, light, temperature, voltage). However, modern computing systems are primarily digital because of several key advantages:
-
-- Reliability: Provides more noise resistance since it operates at low or high levels
-- Digitized signals can represent analog values with good precision given enough digits
-- Ease of data storage, transmission, and compression
-- Digital circuit components are more cost-effective and scalable compared to analog components
 
 ## (Very) High-Level Digital Circuit Design Flow
 
