--- a/digital-logic-design/intro.qmd
+++ b/digital-logic-design/intro.qmd
@@ -15,7 +15,7 @@ This notebook focuses on the design of **digital circuits**. We study both the l
 
 ## (Very) High-Level Digital Circuit Design Flow
 
-*Insert high-level design flow figure here*
+![High-level design flow of a digital circuit to be run on FPGA](images/intro/designflow.png){#fig-label fig-align="center" width="70%"}
 
 The design flow of a digital circuit starts off with a problem statement or design specification. Digital circuits are then described by the designer in a **Hardware Description Language (HDL)**, most commonly **Verilog/SystemVerilog** or **VHDL**. The design is then simulated with a **testbench**, which feeds the design with test inputs. During **simulation**, we can use tools to inspect the state of the signals in the circuit to analyze, debug, and evaluate the design. At this point, such a **behavioral** description of the design merely describes the functionality and not yet its physical implementation. **Synthesis** maps the behavioral description of the design into **netlist** of standard cells, which indicates the physical mapping to circuit components. The **place and route** process then physically places the netlist of cells and routes the wires to connect the components, generating a hardware implementation.
 
